objects/Metric_Template__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Global_Dealer_Program__r.Account_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Display__c</fullName>
        <label>Bonus Display</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Value__c</fullName>
        <label>Bonus Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Bonus_Post_Concat__c</fullName>
        <label>Calculated Bonus Post Concat</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countries_Supported__c</fullName>
        <formula>Global_Dealer_Program__r.Countries_Supported__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Countries Supported</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Domain__c</fullName>
        <formula>Global_Dealer_Program__r.Country_Domain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Performance_Period_End_Date__c</fullName>
        <formula>Global_Dealer_Program__r.Current_Performance_Period_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Performance Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Performance_Period_Start_Date__c</fullName>
        <formula>Global_Dealer_Program__r.Current_Performance_Period_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Performance Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Quarter_of_Performance_Period__c</fullName>
        <formula>Global_Dealer_Program__r.First_Quarter_of_Performance_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Quarter of Performance Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Dealer_Program__c</fullName>
        <label>Global Dealer Program</label>
        <referenceTo>Global_Dealer_Program__c</referenceTo>
        <relationshipLabel>Metrics Template</relationshipLabel>
        <relationshipName>Metrics_Template</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_Dutch__c</fullName>
        <label>Goal For Bonus Help Text Dutch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_English__c</fullName>
        <label>Goal For Bonus Help Text English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_French__c</fullName>
        <label>Goal For Bonus Help Text French</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_German__c</fullName>
        <label>Goal For Bonus Help Text German</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_Italian__c</fullName>
        <label>Goal For Bonus Help Text Italian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_Spanish__c</fullName>
        <label>Goal For Bonus Help Text Spanish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Bonus_Display__c</fullName>
        <label>Goal for Bonus Display</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Bonus_Help_Text__c</fullName>
        <label>Goal for Bonus Help Text Delete</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Goal_for_Bonus_Value__c</fullName>
        <label>Goal for Bonus Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Display__c</fullName>
        <label>Goal for Promotion Display</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_English__c</fullName>
        <label>Goal for Promotion Help Text English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_French__c</fullName>
        <label>Goal for Promotion Help Text French</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_German__c</fullName>
        <label>Goal for Promotion Help Text German</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_Italian__c</fullName>
        <label>Goal for Promotion Help Text Italian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_Spanish__c</fullName>
        <label>Goal for Promotion Help Text Spanish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text__c</fullName>
        <label>Goal for Promotion Help Text Delete</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_dutch__c</fullName>
        <label>Goal for Promotion Help Text Dutch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Value__c</fullName>
        <label>Goal for Promotion Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Display__c</fullName>
        <label>Goal for Retention Display</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_Dutch__c</fullName>
        <label>Goal for Retention Help Text Dutch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_English__c</fullName>
        <label>Goal for Retention Help Text English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_French__c</fullName>
        <label>Goal for Retention Help Text French</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_German__c</fullName>
        <label>Goal for Retention Help Text German</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_Italian__c</fullName>
        <label>Goal for Retention Help Text Italian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_Spanish__c</fullName>
        <label>Goal for Retention Help Text Spanish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text__c</fullName>
        <label>Goal for Retention Help Text Delete</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Value__c</fullName>
        <label>Goal for Retention Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Category_Dutch__c</fullName>
        <label>Metric Category Dutch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Category_French__c</fullName>
        <label>Metric Category French</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Category_German__c</fullName>
        <label>Metric Category German</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Category_Italian__c</fullName>
        <label>Metric Category Italian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Category_Spanish__c</fullName>
        <label>Metric Category Spanish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Category__c</fullName>
        <label>Metric Category</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing / Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance to Business Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_Code__c</fullName>
        <label>Metric Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Metric External ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Metric_Name_Dutch__c</fullName>
        <label>Metric Name Dutch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name_French__c</fullName>
        <label>Metric Name French</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name_German__c</fullName>
        <label>Metric Name German</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name_Italian__c</fullName>
        <label>Metric Name Italian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name_Spanish__c</fullName>
        <label>Metric Name Spanish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name__c</fullName>
        <label>Metric Name</label>
        <picklist>
            <picklistValues>
                <fullName>Adhere to Brand Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus for Extra Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus for Extra Training -No. certified with Associate Commercial Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus for Extra Training -No. certified with Associate Commercial Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus for Extra Training -No. certified with Associate Commercial Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus for Meeting 6 Month Revenue Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus for Meeting All tier requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-branded All Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-branded Business Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-branded sales and installation apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-branded Signs at job-site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Limit Maintained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Complaints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction Responses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction Score (Maximum)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction Score (Minimum)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Growth Plan signed and submitted on time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display of SunPower Training Certificates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite Requirements: Finance Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Inspections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Inspections Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Inspections Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kW Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kW Target (Maximum)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kW Target (Medium)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Metric Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Parent_Code__c</fullName>
        <label>Metric Parent Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Result_Type__c</fullName>
        <label>Metric Result Type</label>
        <picklist>
            <picklistValues>
                <fullName>Numeric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_parentChild__c</fullName>
        <formula>IF( Metric_Parent_Code__c !=null,IF(BEGINS(Metric_Parent_Code__c, LEFT(Metric_Code__c, 2) ) ,&apos;child&apos;,&apos;parent&apos;),&apos;parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric parentChild</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Period__c</fullName>
        <formula>TEXT( Global_Dealer_Program__r.Performance_Period__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Year__c</fullName>
        <formula>Global_Dealer_Program__r.Performance_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Performance_Period_End_Date__c</fullName>
        <formula>Global_Dealer_Program__r.Previous_Performance_Period_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Performance Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Performance_Period_Start_Date__c</fullName>
        <formula>Global_Dealer_Program__r.Previous_Performance_Period_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Performance Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Result_Goal_Comparison__c</fullName>
        <label>Result Goal Comparison</label>
        <picklist>
            <picklistValues>
                <fullName>Greater than or equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than or equal to</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result_Post_Concat__c</fullName>
        <label>Result Post Concat</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Pre_Concat__c</fullName>
        <label>Result Pre Concat</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Quarter_of_Performance_Period__c</fullName>
        <formula>Global_Dealer_Program__r.Second_Quarter_of_Performance_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Quarter of Performance Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submetric_Identifier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submetric Identifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary_Metric__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary Metric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF( CONTAINS(Metric_Code__c,&quot;_RUS_&quot;),&quot;RESIDENTIAL&quot;,IF(CONTAINS(Metric_Code__c,&quot;_CUS_&quot;),&quot;COMMERCIAL&quot;,&quot;METRIC&quot;))</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_to_Display__c</fullName>
        <label>Where to Display</label>
        <picklist>
            <picklistValues>
                <fullName>METRIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OVERALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIDEBAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Metric Template</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Metric_Code__c</columns>
        <columns>Metric_Name__c</columns>
        <columns>Metric_Category__c</columns>
        <columns>Global_Dealer_Program__c</columns>
        <columns>Country_Domain__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Specific_Template</fullName>
        <columns>Global_Dealer_Program__c</columns>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Metric_Code__c</columns>
        <columns>Metric_Name__c</columns>
        <columns>Metric_Parent_Code__c</columns>
        <columns>Performance_Year__c</columns>
        <columns>Performance_Period__c</columns>
        <columns>Metric_Order__c</columns>
        <columns>Countries_Supported__c</columns>
        <columns>Country_Domain__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Performance_Year__c</field>
            <operation>equals</operation>
            <value>2012</value>
        </filters>
        <filters>
            <field>Performance_Period__c</field>
            <operation>equals</operation>
            <value>P2</value>
        </filters>
        <filters>
            <field>Metric_Code__c</field>
            <operation>contains</operation>
            <value>CUS</value>
        </filters>
        <label>Specific Template</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MT-{000000}</displayFormat>
        <label>Metric Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics Template</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>